  * Updated Breaks/Replaces/Conflicts following policy 3.9.1; now each
    kde-l10n-foo breaks and replaces:
    - kde-i18n-foo (<< 4:3.95.0-1)
    - okular-l10n
    - gwenview-i18n 
    - filelight-l10n (because filelight was moved from extragear to kdeutils)
  * Fix typo in package descriptions of kde-i18n-* packages; they depend on the
    KDE 4 version of translations, not on KDE 3.

 -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sun, 12 Sep 2010 01:22:16 +0000

kde-l10n (4:4.4.5-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Bump kde-sc-dev-latest build dependency to 4:4.4.5.

  [ Ana Beatriz Guerrero Lopez ]
  * Update Standards-Version to 3.9.1, no changes required.
  * Update debhelper compatibility to 7.
  * Add a few missing ${misc:Depends}.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 28 Jul 2010 13:17:47 -0400

kde-l10n (4:4.4.4-2) unstable; urgency=high

  * debian/control: replace kde-minimal with kde-standard.
  * Do not ship ktorrent translations in kde-l10n-sr (Closes: #584633).
  * Urgency=high due to RC bug fix.

 -- Modestas Vainius <modax@debian.org>  Sat, 12 Jun 2010 21:10:27 +0300

kde-l10n (4:4.4.4-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Bump kde-sc-dev-latest build dependency to 4:4.4.4.

  [ Ana Beatriz Guerrero Lopez ]
  * Remove patch fix_nl, merged upstream.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Thu, 03 Jun 2010 15:33:38 +0200

kde-l10n (4:4.4.3-1) unstable; urgency=low

  * New upstream release.

  [ Modestas Vainius ]
  * Bump kde-sc-dev-latest build dependency to 4.4.3.

  [ Ana Beatriz Guerrero Lopez ]
  * Add patch fix_nl to fix nl language build.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Mon, 03 May 2010 01:40:07 +0200

kde-l10n (4:4.4.2-1) experimental; urgency=low

  * New upstream release:
    - add languagues: ca@valencia, eo, id, si;
    - remove languages: bnin, hne, ku, mr, th.