@@ -776,502 +776,3 @@ Description: Chinese Traditional (zh_TW) localization files for KDE
  This package contains the Chinese Traditional translations for applications from the
  official KDE 4 release.
 
-# And now, the transitional packages from kde-i18n-* fun
-
-#Package: kde-i18n-af
-#Architecture: all
-#Depends: kde-l10n-af
-#Description: Afrikaans (af) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Afrikaans translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-ar
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ar
-Description: Arabic (ar) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Arabic translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-az
-#Architecture: all
-#Depends: kde-l10n-az
-#Description: Azerbaijani (az) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Azerbaijani translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-be
-#Architecture: all
-#Depends: kde-l10n-be
-#Description: Belarusian (be) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Belarusian translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-bg
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-bg
-Description: Bulgarian (bg) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Bulgarian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-bn
-#Architecture: all
-#Depends: ${misc:Depends}, kde-l10n-bnin
-#Description: Bengali (bn) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Bengali translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-br
-#Architecture: all
-#Depends: kde-l10n-br
-#Description: Breton (br) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Breton translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-bs
-#Architecture: all
-#Depends: kde-l10n-bs
-#Description: Bosnian (bs) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Bosnian translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-ca
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ca
-Description: Catalan (ca) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Catalan translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-cs
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-cs
-Description: Czech (cs) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Czech translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-csb
-#Architecture: all
-#Depends: ${misc:Depends}, kde-l10n-csb
-#Description: Kashubian (csb) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Kashubian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-cy
-#Architecture: all
-#Depends: kde-l10n-cy
-#Description: Welsh (cy) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Welsh translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-da
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-da
-Description: Danish (da) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Danish translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-de
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-de
-Description: German (de) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- German translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-el
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-el
-Description: Greek (el) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Greek translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-engb
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-engb
-Description: British English (en_GB) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- British English translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-eo
-#Architecture: all
-#Depends: ${misc:Depends}, kde-l10n-eo
-#Description: Esperanto (eo) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Esperanto translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-es
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-es
-Description: Spanish (es) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Spanish translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-et
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-et
-Description: Estonian (et) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Estonian translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-eu
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-eu
-Description: Basque (eu) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Basque translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-fa
-#Architecture: all
-#Depends: kde-l10n-fa
-#Description: Farsi (Persian) (fa) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Farsi translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-fi
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-fi
-Description: Finnish (fi) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Finnish translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-fr
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-fr
-Description: French (fr) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- French translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-fy
-#Architecture: all
-#Depends: ${misc:Depends}, kde-l10n-fy
-#Description: Frisian (fy) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Frisian translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-ga
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ga
-Description: Irish Gaelic (ga) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Irish Gaelic translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-gl
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-gl
-Description: Galician (gl) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Galician translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-he
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-he
-Description: Hebrew (he) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Hebrew translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-hi
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-hi
-Description: Hindi (hi) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Hindi translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-hr
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-hr
-Description: Croatian (hr) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Croatian translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-hu
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-hu
-Description: Hungarian (hu) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Hungarian translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-is
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-is
-Description: Icelandic (is) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Icelandic translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-it
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-it
-Description: Italian (it) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Italian translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-ja
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ja
-Description: Japanese (ja) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Japanese translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-kk
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-kk
-Description: Kazakh (kk) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Kazakh translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-km
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-km
-Description: Khmer (km) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Khmer translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-ko
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ko
-Description: Korean (ko) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Korean translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-lt
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-lt
-Description: Lithuanian (lt) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Lithuanian translations to ease upgrades. It may be safely removed..
-
-Package: kde-i18n-lv
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-lv
-Description: Latvian (lv) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Latvian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-mk
-#Architecture: all
-#Depends: ${misc:Depends}, kde-l10n-mk
-#Description: Macedonian (mk) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Macedonian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-mn
-#Architecture: all
-#Depends: kde-l10n-mn
-#Description: Mongolian (mn) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Mongolian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-ms
-#Architecture: all
-#Depends: kde-l10n-ms
-#Description: Malay (ms) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Malay translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-nb
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-nb
-Description: Norwegian Bookmal (nb) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Norwegian Bookmal translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-nds
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-nds
-Description: Low Saxon (nds) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Low Saxon translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-nl
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-nl
-Description: Dutch (nl) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Dutch translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-nn
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-nn
-Description: Norwegian Nynorsk (nn) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Norwegian Nynorsk translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-pa
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-pa
-Description: Punjabi (pa) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Punjabi translations to ease upgrades. It may be safely removed.s.
-
-Package: kde-i18n-pl
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-pl
-Description: Polish (pl) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Polish translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-pt
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-pt
-Description: Portuguese (pt) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Portuguese translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-ptbr
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ptbr
-Description: Brazilian Portuguese (pt_BR) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Brazilian Portuguese translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-ro
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ro
-Description: Romanian (ro) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Romanian translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-ru
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-ru
-Description: Russian (ru) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Russian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-rw
-#Architecture: all
-#Depends: kde-l10n-rw
-#Description: Kinyarwanda (rw) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Kinyarwanda translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-se
-#Architecture: all
-#Depends: kde-l10n-se
-#Description: Northern Sami (se) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Northern Sami translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-sk
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-sk
-Description: Slovak (sk) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Slovak translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-sl
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-sl
-Description: Slovenian (sl) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Slovenian translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-sr
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-sr
-Description: Serbian (sr) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Serbian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-ss
-#Architecture: all
-#Depends: kde-l10n-ss
-#Description: Swati (ss) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Swati translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-srlatin
-#Architecture: all
-#Depends: kde-l10n-srlatin
-#Description: Latin Serbian (sr@Latn) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Latin Serbian translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-sv
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-sv
-Description: Swedish (sv) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Swedish translations to ease upgrades. It may be safely removed.
- 
-#Package: kde-i18n-ta
-#Architecture: all
-#Depends: kde-l10n-ta
-#Description: Tamil (ta) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Tamil translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-te
-#Architecture: all
-#Depends: kde-l10n-te
-#Description: Telugu (te) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Telugu translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-tg
-#Architecture: all
-#Depends: ${misc:Depends}, kde-l10n-tg
-#Description: Tajik (tg) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Tajik translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-th
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-th
-Description: Thai (th) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Thai translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-tr
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-tr
-Description: Turkish (tr) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Turkish translations to ease upgrades. It may be safely removed.
- 
-Package: kde-i18n-uk
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-uk
-Description: Ukrainian (uk) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Ukrainian translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-uz
-#Architecture: all
-#Depends: kde-l10n-uz
-#Description: Uzbek (uz) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Uzbek translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-uzcyrillic
-#Architecture: all
-#Depends: kde-l10n-uzcyrillic
-#Description: Cyrillic Uzbek (uz@cyrillic) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Cyrillic Uzbek translations to ease upgrades. It may be safely removed.
-
-#Package: kde-i18n-vi
-#Architecture: all
-#Depends: kde-l10n-vi
-#Description: Vietnamese (vi) internationalized files for KDE (transitional dummy package)
-# This is a "dummy" package that depends on KDE 4 version of
-# Vietnamese translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-wa
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-wa
-Description: Walloon (wa) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Walloon translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-zhcn
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-zhcn
-Description: Chinese Simplified (zh_CN) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Chinese Simplified translations to ease upgrades. It may be safely removed.
-
-Package: kde-i18n-zhtw
-Architecture: all
-Depends: ${misc:Depends}, kde-l10n-zhtw
-Description: Chinese Traditional (zh_TW) internationalized files for KDE (transitional dummy package)
- This is a "dummy" package that depends on KDE 4 version of
- Chinese Traditional translations to ease upgrades. It may be safely removed.
- 
