@@ -20,6 +20,10 @@ kde-l10n (4:4.6.0-0r1) UNRELEASED; urgency=low
   * Fix typo in package descriptions of kde-i18n-* packages; they depend on the
     KDE 4 version of translations, not on KDE 3.
 
+  [ Modestas Vainius ]
+  * Drop all kde-i18n-* transitional packages and related code in debian/rules.
+    These were squeeze-only.
+
  -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sun, 12 Sep 2010 01:22:16 +0000
 
 kde-l10n (4:4.4.5-1) unstable; urgency=low
